--- a/.travis.yml
+++ b/.travis.yml
@@ -20,8 +20,9 @@ addons:
     packages:
       - cmake
       - python-sphinx
-      - sphinx_bootstrap_theme
 
+install:
+  - pip install sphinx_bootstrap_theme
 
 
 script: 
