--- a/.travis.yml
+++ b/.travis.yml
@@ -21,6 +21,8 @@ addons:
       - cmake
       - python-sphinx
 
+install:
+  - pip install -r REQUIREMENTS.txt
 
 script: 
   - cd docs ; make html ; ls _build
