--- a/REQUIREMENTS.txt
+++ b/REQUIREMENTS.txt
@@ -1,11 +1,14 @@
-Jinja2==2.7.1
+Jinja2==2.7.2
 MarkupSafe==0.18
 Pygments==1.6
-Sphinx==1.1.3
+Sphinx==1.2
+argparse==1.2.1
 distribute==0.7.3
 docutils==0.11
 polib==1.0.3
-six==1.4.1
-sphinx-intl==0.9.3
-transifex-client==0.9.1
+six==1.5.2
+sphinx-intl==0.9.4
+transifex-client==0.9
+twitter==1.10.2
 wsgiref==0.1.2
+
