precise is EOL, setting test with trusty

--- a/.travis.yml
+++ b/.travis.yml
@@ -4,6 +4,8 @@
 #
 # Main configuration
 # ------------------------------------------------------------------------------
+group: edge
+dist: trusty
 
 language: python
 
