--- a/.travis.yml
+++ b/.travis.yml
@@ -22,8 +22,8 @@ addons:
       - ghostscript
 
 
-#install:
-    #- pip install -r REQUIREMENTS.txt
+install:
+  - pip install -r REQUIREMENTS.txt
 
 script: 
   - cd docs ; make html 
