restarting all over

--- a/.travis.yml
+++ b/.travis.yml
@@ -15,11 +15,11 @@ addons:
     packages:
       - cmake
       - python-sphinx
-      - graphviz
-      - texlive
-      - texlive-font-utils
-      - texlive-latex-extra
-      - ghostscript
+      #- graphviz
+      #- texlive
+      #- texlive-font-utils
+      #- texlive-latex-extra
+      #- ghostscript
 
 
 install:
