adding mail notification

--- a/.travis.yml
+++ b/.travis.yml
@@ -9,18 +9,16 @@ dist: trusty
 
 language: python
 
+notifications:
+  email:
+    on_failure: project@pgrouting.org
+
 # excecuted. So things have to be tested oe by one.
 addons:
   apt:
     packages:
       - cmake
       - python-sphinx
-      #- graphviz
-      #- texlive
-      #- texlive-font-utils
-      #- texlive-latex-extra
-      #- ghostscript
-
 
 install:
   - pip install -r REQUIREMENTS.txt
