using sphonx stable

--- a/.travis.yml
+++ b/.travis.yml
@@ -17,11 +17,12 @@ notifications:
 addons:
   apt:
     packages:
-      - cmake
-      - python-sphinx
+      #- cmake
+      #- python-sphinx
 
 install:
-  - pip install -r REQUIREMENTS.txt
+  - pip install git+https://github.com/sphinx-doc/sphinx@stable
+  - pip install sphinx-intl
 
 script: 
   - cd docs ; make html 
