--- a/.travis.yml
+++ b/.travis.yml
@@ -23,6 +23,7 @@ addons:
 install:
   - pip install git+https://github.com/sphinx-doc/sphinx@stable
   - pip install sphinx-intl
+  - pip install -r REQUIREMENTS.txt
 
 script: 
   - cd docs ; make html 
