--- a/REQUIREMENTS.txt
+++ b/REQUIREMENTS.txt
@@ -11,5 +11,5 @@
 #transifex-client==0.9
 #twitter==1.10.2
 #wsgiref==0.1.2
-#sphinxcontrib-images==0.7.0
+sphinxcontrib-images==0.7.0
 sphinx_bootstrap_theme==0.4
