works building the docs

--- a/.tx/config
+++ b/.tx/config
@@ -2,99 +2,99 @@
 host = https://www.transifex.com
 type = PO
 
-[pgrouting-workshop.locale--index]
-file_filter = locales/<lang>/LC_MESSAGES/locale/index.po
-source_file = locale/pot/locale/index.pot
+[pgrouting-workshop.index]
+file_filter = locale/<lang>/LC_MESSAGES/index.po
+source_file = locale/pot/index.pot
 source_lang = en
 type = PO
 
-[pgrouting-workshop.locale--chapters--the_solutions]
-file_filter = locales/<lang>/LC_MESSAGES/locale/chapters/the_solutions.po
-source_file = locale/pot/locale/chapters/the_solutions.pot
+[pgrouting-workshop.chapters--the_solutions]
+file_filter = locale/<lang>/LC_MESSAGES/chapters/the_solutions.po
+source_file = locale/pot/chapters/the_solutions.pot
 source_lang = en
 type = PO
 
-[pgrouting-workshop.locale--chapters--topology]
-file_filter = locales/<lang>/LC_MESSAGES/locale/chapters/topology.po
-source_file = locale/pot/locale/chapters/topology.pot
+[pgrouting-workshop.chapters--topology]
+file_filter = locale/<lang>/LC_MESSAGES/chapters/topology.po
+source_file = locale/pot/chapters/topology.pot
 source_lang = en
 type = PO
 
-[pgrouting-workshop.locale--chapters--installation]
-file_filter = locales/<lang>/LC_MESSAGES/locale/chapters/installation.po
-source_file = locale/pot/locale/chapters/installation.pot
+[pgrouting-workshop.chapters--installation]
+file_filter = locale/<lang>/LC_MESSAGES/chapters/installation.po
+source_file = locale/pot/chapters/installation.pot
 source_lang = en
 type = PO
 
-[pgrouting-workshop.locale--chapters--geoserver]
-file_filter = locales/<lang>/LC_MESSAGES/locale/chapters/geoserver.po
-source_file = locale/pot/locale/chapters/geoserver.pot
+[pgrouting-workshop.chapters--geoserver]
+file_filter = locale/<lang>/LC_MESSAGES/chapters/geoserver.po
+source_file = locale/pot/chapters/geoserver.pot
 source_lang = en
 type = PO
 
-[pgrouting-workshop.locale--chapters--introduction]
-file_filter = locales/<lang>/LC_MESSAGES/locale/chapters/introduction.po
-source_file = locale/pot/locale/chapters/introduction.pot
+[pgrouting-workshop.chapters--introduction]
+file_filter = locale/<lang>/LC_MESSAGES/chapters/introduction.po
+source_file = locale/pot/chapters/introduction.pot
 source_lang = en
 type = PO
 
-[pgrouting-workshop.locale--chapters--SQLfunction]
-file_filter = locales/<lang>/LC_MESSAGES/locale/chapters/SQLfunction.po
-source_file = locale/pot/locale/chapters/SQLfunction.pot
+[pgrouting-workshop.chapters--SQLfunction]
+file_filter = locale/<lang>/LC_MESSAGES/chapters/SQLfunction.po
+source_file = locale/pot/chapters/SQLfunction.pot
 source_lang = en
 type = PO
 
-[pgrouting-workshop.locale--chapters--function]
-file_filter = locales/<lang>/LC_MESSAGES/locale/chapters/function.po
-source_file = locale/pot/locale/chapters/function.pot
+[pgrouting-workshop.chapters--function]
+file_filter = locale/<lang>/LC_MESSAGES/chapters/function.po
+source_file = locale/pot/chapters/function.pot
 source_lang = en
 type = PO
 
-[pgrouting-workshop.locale--chapters--about]
-file_filter = locales/<lang>/LC_MESSAGES/locale/chapters/about.po
-source_file = locale/pot/locale/chapters/about.pot
+[pgrouting-workshop.chapters--about]
+file_filter = locale/<lang>/LC_MESSAGES/chapters/about.po
+source_file = locale/pot/chapters/about.pot
 source_lang = en
 type = PO
 
-[pgrouting-workshop.locale--chapters--shortest_path]
-file_filter = locales/<lang>/LC_MESSAGES/locale/chapters/shortest_path.po
-source_file = locale/pot/locale/chapters/shortest_path.pot
+[pgrouting-workshop.chapters--shortest_path]
+file_filter = locale/<lang>/LC_MESSAGES/chapters/shortest_path.po
+source_file = locale/pot/chapters/shortest_path.pot
 source_lang = en
 type = PO
 
-[pgrouting-workshop.locale--chapters--usingQgis]
-file_filter = locales/<lang>/LC_MESSAGES/locale/chapters/usingQgis.po
-source_file = locale/pot/locale/chapters/usingQgis.pot
+[pgrouting-workshop.chapters--usingQgis]
+file_filter = locale/<lang>/LC_MESSAGES/chapters/usingQgis.po
+source_file = locale/pot/chapters/usingQgis.pot
 source_lang = en
 type = PO
 
-[pgrouting-workshop.locale--chapters--additional_installation]
-file_filter = locales/<lang>/LC_MESSAGES/locale/chapters/additional_installation.po
-source_file = locale/pot/locale/chapters/additional_installation.pot
+[pgrouting-workshop.chapters--additional_installation]
+file_filter = locale/<lang>/LC_MESSAGES/chapters/additional_installation.po
+source_file = locale/pot/chapters/additional_installation.pot
 source_lang = en
 type = PO
 
-[pgrouting-workshop.locale--chapters--advanced]
-file_filter = locales/<lang>/LC_MESSAGES/locale/chapters/advanced.po
-source_file = locale/pot/locale/chapters/advanced.pot
+[pgrouting-workshop.chapters--advanced]
+file_filter = locale/<lang>/LC_MESSAGES/chapters/advanced.po
+source_file = locale/pot/chapters/advanced.pot
 source_lang = en
 type = PO
 
-[pgrouting-workshop.locale--chapters--ol3_client]
-file_filter = locales/<lang>/LC_MESSAGES/locale/chapters/ol3_client.po
-source_file = locale/pot/locale/chapters/ol3_client.pot
+[pgrouting-workshop.chapters--ol3_client]
+file_filter = locale/<lang>/LC_MESSAGES/chapters/ol3_client.po
+source_file = locale/pot/chapters/ol3_client.pot
 source_lang = en
 type = PO
 
-[pgrouting-workshop.locale--chapters--prepare_data]
-file_filter = locales/<lang>/LC_MESSAGES/locale/chapters/prepare_data.po
-source_file = locale/pot/locale/chapters/prepare_data.pot
+[pgrouting-workshop.chapters--prepare_data]
+file_filter = locale/<lang>/LC_MESSAGES/chapters/prepare_data.po
+source_file = locale/pot/chapters/prepare_data.pot
 source_lang = en
 type = PO
 
-[pgrouting-workshop.locale--chapters--osm2pgrouting]
-file_filter = locales/<lang>/LC_MESSAGES/locale/chapters/osm2pgrouting.po
-source_file = locale/pot/locale/chapters/osm2pgrouting.pot
+[pgrouting-workshop.chapters--osm2pgrouting]
+file_filter = locale/<lang>/LC_MESSAGES/chapters/osm2pgrouting.po
+source_file = locale/pot/chapters/osm2pgrouting.pot
 source_lang = en
 type = PO
 
