updated to transifex the last changes

--- a/.tx/config
+++ b/.tx/config
@@ -80,9 +80,9 @@ source_file = locale/pot/chapters/advanced.pot
 source_lang = en
 type = PO
 
-[pgrouting-workshop.chapters--ol3_client]
-file_filter = locale/<lang>/LC_MESSAGES/chapters/ol3_client.po
-source_file = locale/pot/chapters/ol3_client.pot
+[pgrouting-workshop.chapters--ol_client]
+file_filter = locale/<lang>/LC_MESSAGES/chapters/ol_client.po
+source_file = locale/pot/chapters/ol_client.pot
 source_lang = en
 type = PO
 
