--- a/REQUIREMENTS.txt
+++ b/REQUIREMENTS.txt
@@ -1,6 +1,7 @@
-Sphinx==1.6.5
-sphinx-intl==0.9.11
-transifex-client==0.13.4
-#twitter==1.10.2
-sphinxcontrib-images==0.7.0
-sphinx_bootstrap_theme==0.4
+Sphinx>=1.6.5
+sphinx-intl>=0.9.11
+transifex-client>=0.13.4
+#twitter>=1.10.2
+sphinxcontrib-images>=0.7.0
+sphinx_bootstrap_theme>=0.4
+wheel>=0.33.6
