Add Scripts directory Changes to be committed: 	modified:   CMakeLists.txt 	new file:   scripts/CMakeLists.txt 	new file:   scripts/create-db.sh

--- a/CMakeLists.txt
+++ b/CMakeLists.txt
@@ -230,4 +230,5 @@ message(STATUS "SPHINXINTL_LANGUAGE = ${SPHINXINTL_LANGUAGE}")
 #---------------------------------------------
 #---------------------------------------------
 
+add_subdirectory(scripts)
 add_subdirectory(docs)
