--- a/.travis.yml
+++ b/.travis.yml
@@ -24,4 +24,7 @@ install:
   - pip install -r REQUIREMENTS.txt
 
 script:
-  - cd docs ; make html
+  - mkdir build
+  - cd build
+  - cmake -DHTML=ON ..
+  - make
