[travis] using cmake

--- a/.travis.yml
+++ b/.travis.yml
@@ -17,14 +17,10 @@ notifications:
 addons:
   apt:
     packages:
-      #- cmake
-      #- python-sphinx
+      - cmake
 
 install:
   - pip install -r REQUIREMENTS.txt
 
 script:
-  - mkdir build
-  - cd build
-  - cmake -DHTML=ON ..
-  - make
+  - mkdir build; cd build ; cmake -DHTML=ON .. ; make
