--- a/CMakeLists.txt
+++ b/CMakeLists.txt
@@ -17,6 +17,7 @@ set(CMAKE_MODULE_PATH "${CMAKE_SOURCE_DIR}/cmake")
 #---------------------------------------------
 #---------------------------------------------
 
+set(SCRIPTS_DIR "../../scripts")
 #---------------------------------------------
 # Setting the version number
 #---------------------------------------------
