Making things work

--- a/docs/scripts/CMakeLists.txt
+++ b/docs/scripts/CMakeLists.txt
@@ -1,3 +1,4 @@
+add_custom_target(scripts ALL)
 
 ## directory with no files
 
@@ -10,6 +11,12 @@ set(PGR_WORKSHOP_SUBDIRS
   )
 
 
+if ("${MAPCONFIG}" EQUAL "MAPCONFIG-NOTFOUND")
+  message(FATAL_ERROR "mapconfig.xml not found. Check the osm2pgrouting installation!")
+else()
+  message(STATUS "mapconfig.xml found: ${MAPCONFIG}")
+endif()
+
 
 #---------------------------------------------
 # Adding the documentation subdirectories & files
@@ -20,13 +27,6 @@ foreach (dir ${PGR_WORKSHOP_SUBDIRS})
         message(STATUS "   Adding directory ${dir}")
     endif()
     add_subdirectory(${dir})
+    add_dependencies(scripts "${dir}_scripts")
 endforeach()
 
-if ("${MAPCONFIG}" EQUAL "MAPCONFIG-NOTFOUND")
-  message(FATAL_ERROR "mapconfig.xml not found. Check the osm2pgrouting installation!")
-else()
-  message(STATUS "mapconfig.xml found: ${MAPCONFIG}")
-endif()
-
-add_custom_target(db_scripts)
-add_dependencies(db_scripts create_db)
