--- a/docs/CMakeLists.txt
+++ b/docs/CMakeLists.txt
@@ -16,18 +16,16 @@ set(PGR_WORKSHOP_SUBDIRS
   "chapters"
     )
 
+add_custom_target(doc COMMENT "Building documentation with Sphinx")
+
 
 
 #---------------------------------------------
 # Adding the documentation subdirectories & files
 #---------------------------------------------
 
-foreach (dir ${PGR_WORKSHOP_SUBDIRS})
-    if (PGR_WORKSHOP_DEBUG)
-        message(STATUS "   Adding directory ${dir}")
-    endif()
-    add_subdirectory(${dir})
-endforeach()
+add_subdirectory(scripts)
+add_subdirectory(chapters)
 
 foreach (f ${PGR_WORKSHOP_FILES})
     if (PGR_WORKSHOP_VERBOSE_DEBUG)
@@ -84,8 +82,6 @@ if (LOCALE)
 endif()
 
 
-add_custom_target(doc
-    COMMENT "Building documentation with Sphinx")
 
 foreach (target ${PGR_WORKSHOP_DOC_TARGETS})
     add_custom_target(${target} ALL
@@ -110,6 +106,7 @@ foreach (target ${PGR_WORKSHOP_DOC_TARGETS})
 
             COMMENT "Generating ${target}/${lang} documentation ..."
             )
+        add_dependencies("${target}-${lang}" chapters scripts)
         add_dependencies("${target}" "${target}-${lang}")
     endforeach()
     add_dependencies(doc "${target}")
