cmakefiles changes and things work

--- a/docs/scripts/CMakeLists.txt
+++ b/docs/scripts/CMakeLists.txt
@@ -33,4 +33,4 @@ foreach (dir ${PGR_WORKSHOP_SUBDIRS})
 endforeach()
 
 add_dependencies(chapter_5_scripts chapter_4_scripts)
-
+add_dependencies(chapter_6_scripts chapter_4_scripts)
