updating the CMakelists

--- a/docs/scripts/CMakeLists.txt
+++ b/docs/scripts/CMakeLists.txt
@@ -10,6 +10,7 @@ set(PGR_WORKSHOP_SUBDIRS
   "chapter_4"
   "chapter_5"
   "chapter_6"
+  "chapter_7"
   )
 
 
@@ -34,3 +35,4 @@ endforeach()
 
 add_dependencies(chapter_5_scripts chapter_4_scripts)
 add_dependencies(chapter_6_scripts chapter_4_scripts)
+add_dependencies(chapter_7_scripts chapter_4_scripts)
