changing the structure of configuration on scripts

--- a/docs/scripts/CMakeLists.txt
+++ b/docs/scripts/CMakeLists.txt
@@ -7,7 +7,6 @@ add_custom_target(scripts ALL)
 # Directories
 #---------------------
 set(PGR_WORKSHOP_SUBDIRS
-  "chapter_4"
   "chapter_5"
   "chapter_6"
   "chapter_7"
@@ -20,6 +19,17 @@ else()
   message(STATUS "mapconfig.xml found: ${MAPCONFIG}")
 endif()
 
+add_subdirectory(chapter_4)
+add_dependencies(scripts chapter_4_scripts)
+add_subdirectory(configuration)
+include(workshop/OsmidConf)
+add_dependencies(scripts configuration_scripts)
+message(STATUS "ID_1 = ${ID_1}")
+message(STATUS "ID_2 = ${ID_2}")
+message(STATUS "ID_3 = ${ID_3}")
+message(STATUS "ID_4 = ${ID_4}")
+message(STATUS "ID_5 = ${ID_5}")
+
 
 #---------------------------------------------
 # Adding the documentation subdirectories & files
@@ -27,12 +37,13 @@ endif()
 
 foreach (dir ${PGR_WORKSHOP_SUBDIRS})
     if (PGR_WORKSHOP_DEBUG)
-        message(STATUS "   Adding directory ${dir}")
+        message(STATUS "   Adding directory scripts/${dir}")
     endif()
     add_subdirectory(${dir})
     add_dependencies(scripts "${dir}_scripts")
 endforeach()
 
-add_dependencies(chapter_5_scripts chapter_4_scripts)
-add_dependencies(chapter_6_scripts chapter_4_scripts)
-add_dependencies(chapter_7_scripts chapter_4_scripts)
+add_dependencies(configuration_scripts chapter_4_scripts)
+add_dependencies(chapter_5_scripts configuration_scripts)
+add_dependencies(chapter_6_scripts configuration_scripts)
+add_dependencies(chapter_7_scripts configuration_scripts)
