--- a/docs/scripts/CMakeLists.txt
+++ b/docs/scripts/CMakeLists.txt
@@ -46,4 +46,4 @@ add_dependencies(chapter_5_scripts configuration_scripts)
 add_dependencies(chapter_6_scripts configuration_scripts)
 add_dependencies(chapter_7_scripts configuration_scripts)
 add_dependencies(chapter_8_scripts configuration_scripts)
-
+add_dependencies(chapter_8_scripts chapter_7_scripts)
