keeping one job, we dont need more

--- a/.github/workflows/ubuntu.yml
+++ b/.github/workflows/ubuntu.yml
@@ -32,7 +32,7 @@ jobs:
         matrix:
           postgis: [3]
           psql: [12]
-          python-version: [2.7, 3.5, 3.8]
+          python-version: [3.5]
 
     steps:
 
