--- a/CMakeLists.txt
+++ b/CMakeLists.txt
@@ -47,6 +47,7 @@ set(PGR_WORKSHOP_CITY_FILE "BA_AR")
 set(PGR_WORKSHOP_CITY_BBOX "-58.48,-34.60,-58.32,-34.521")
 set(PGR_WORKSHOP_DOWNLOAD_DIR "workshop-2021")
 
+# TODO Update to: "osm_id" IN (2153015792,6357258588,4289340366,192903446,196017392)
 set(OSMID_1 "89200781")
 set(OSMID_2 "4289340366")
 set(OSMID_3 "6688425623")
