--- a/.github/workflows/ubuntu.yml
+++ b/.github/workflows/ubuntu.yml
@@ -1,69 +1,55 @@
-name: Build for Ubuntu
+name: Build workshop
 
 on: [push, pull_request]
-
 
 jobs:
   build:
     name: Build
     runs-on: ubuntu-latest
-    services:
-      postgres:
-        # Docker Hub image
-        image: postgres:${{ matrix.psql }}
-        # Provide the password for postgres
-        env:
-          POSTGRES_USER: postgres
-          POSTGRES_PASSWORD: postgres
-          POSTGRES_DB: setup
-
-        # Set health checks to wait until postgres has started
-        options: >-
-          --health-cmd pg_isready
-          --health-interval 10s
-          --health-timeout 5s
-          --health-retries 5
-        ports:
-          - 5432/tcp
-
 
     strategy:
-        fail-fast: false
-        matrix:
-          postgis: [3]
-          psql: [12]
-          python-version: [3.5]
+      fail-fast: false
 
     steps:
+      - uses: actions/checkout@v2
 
-      - name: Checkout repository
-        uses: actions/checkout@v2
+      - name: Get postgres version
+        run: |
+          sudo service postgresql start
+          pgver=$(psql --version | grep -Po '(?<=psql \(PostgreSQL\) )[^;]+(?=\.\d \()')
+          echo "PGVER=${pgver}" >> $GITHUB_ENV
+          echo "PGIS=3" >> $GITHUB_ENV
 
-      - name: Set up Python ${{ matrix.python-version }}
+      - name: Add PostgreSQL APT repository
+        run: |
+          sudo apt-get install curl ca-certificates gnupg
+          curl https://www.postgresql.org/media/keys/ACCC4CF8.asc | sudo apt-key add -
+          sudo sh -c 'echo "deb http://apt.postgresql.org/pub/repos/apt/ \
+            $(lsb_release -cs)-pgdg main" > /etc/apt/sources.list.d/pgdg.list'
+
+      - name: Install python
         uses: actions/setup-python@v2
         with:
-          python-version: ${{ matrix.python-version }}
+          python-version: '3.x'
 
       - name: Install dependencies
         run: |
-          python -m pip install --upgrade pip
-          if [ -f REQUIREMENTS.txt ]; then pip install -r REQUIREMENTS.txt; fi
+          sudo apt-get update
           sudo apt-get install -y osm2pgrouting \
-            postgresql-${{ matrix.psql }}-postgis-${{ matrix.postgis }} \
-            postgresql-${{ matrix.psql }}-postgis-${{ matrix.postgis }}-scripts \
-            postgresql-${{ matrix.psql }}-pgrouting
+            postgresql-${PGVER}-postgis-${PGIS} \
+            postgresql-${PGVER}-postgis-${PGIS}-scripts \
+            postgresql-${PGVER}-pgrouting
 
+          python -m pip install --upgrade pip
+          pip install -r REQUIREMENTS.txt
+          pip list
 
       - name: Configure
         run: |
+          service postgresql status
           sudo service postgresql start
           echo "here 1"
           service postgresql status
-          echo "here 2"
-          sudo netstat -plunt |grep postgres
-          echo "here 3"
-          psql --version
-          echo "here 4"
           sudo -u postgres createdb -p ${POSTGRES_PORT}  setup
           sudo -u postgres psql -c 'CREATE ROLE "runner" SUPERUSER CREATEDB CREATEROLE INHERIT LOGIN PASSWORD $$runner$$;' -d setup
           echo :5432:*:runner:runner >> .pgpass
