--- a/CMakeLists.txt
+++ b/CMakeLists.txt
@@ -45,6 +45,7 @@ option(PGR_WORKSHOP_VERBOSE_DEBUG
 set(PGR_WORKSHOP_CITY "Buenos Aires")
 set(PGR_WORKSHOP_CITY_FILE "BA_AR")
 set(PGR_WORKSHOP_CITY_BBOX "-58.48,-34.60,-58.32,-34.521")
+set(PGR_WORKSHOP_LITTLE_NET_BBOX "-58.48,-34.60,-58.32,-34.521")
 set(PGR_WORKSHOP_DOWNLOAD_DIR "workshop-2021")
 
 set(OSMID_1 "2153015792")
