Setting variable prameters

--- a/CMakeLists.txt
+++ b/CMakeLists.txt
@@ -20,12 +20,18 @@ set(CMAKE_MODULE_PATH "${CMAKE_SOURCE_DIR}/cmake")
 #---------------------------------------------
 # Setting the version number
 #---------------------------------------------
+set(WORKSHOP_TITLE "Workshop FOSS4G Argentina") 
+set(COPYRIGHT "2010-2021 Daniel Kastl, Vicky Vergara")
 set(PGR_WORKSHOP_VERSION_MAJOR "2")
 set(PGR_WORKSHOP_VERSION_MINOR "7")
 set(PGR_WORKSHOP_VERSION_PATCH "0")
 set(PGR_WORKSHOP_VERSION_DEV "dev")
-set(PGR_WORKSHOP_VERSION "${PGR_WORKSHOP_VERSION_MAJOR}.${PGR_WORKSHOP_VERSION_MINOR}.${PGR_WORKSHOP_VERSION_MINOR}${PGR_WORKSHOP_VERSION_DEV}")
+set(PGR_WORKSHOP_VERSION "${PGR_WORKSHOP_VERSION_MAJOR}.${PGR_WORKSHOP_VERSION_MINOR}")
+set(PGR_WORKSHOP_RELEASE "${PGR_WORKSHOP_VERSION_MAJOR}.${PGR_WORKSHOP_VERSION_MINOR}.${PGR_WORKSHOP_VERSION_PATCH}${PGR_WORKSHOP_VERSION_DEV}")
 set(PGR_WORKSHOP_NAME "pgRouting workshop")
+set(PGR_HTML_TITLE "Workshop - FOSS4G 2021 Argentina - Routing with pgRouting")
+set(PGR_HTML_SHORT_TITLE "Workshop - Argentina")
+
 
 #---------------------------------------------
 # setting debug options
