--- a/docs/CMakeLists.txt
+++ b/docs/CMakeLists.txt
@@ -71,13 +71,9 @@ if (LOCALE)
 
         COMMAND sphinx-intl update -d ${CMAKE_SOURCE_DIR}/locale -l en
 
-        #COMMAND sphinx-intl update-txconfig-resources --locale-dir ${CMAKE_SOURCE_DIR}/locale --pot-dir ${CMAKE_SOURCE_DIR}/locale/pot --transifex-project-name osgeolive
-
-
-        DEPENDS overview/overview.rst metrics.rst
-
         COMMENT "Generating POT & PO files ..."
         )
+    add_dependencies(locale chapters scripts)
     return()
 endif()
 
