--- a/.tx/config
+++ b/.tx/config
@@ -3,98 +3,116 @@ host = https://www.transifex.com
 type = PO
 
 [pgrouting-workshop.index]
-file_filter = locale/<lang>/LC_MESSAGES/index.po
+file_filter = locales/<lang>/LC_MESSAGES/index.po
 source_file = locale/pot/index.pot
 source_lang = en
 type = PO
 
-[pgrouting-workshop.chapters--the_solutions]
-file_filter = locale/<lang>/LC_MESSAGES/chapters/the_solutions.po
-source_file = locale/pot/chapters/the_solutions.pot
+[pgrouting-workshop.chapters--appendix-1]
+file_filter = locales/<lang>/LC_MESSAGES/chapters/appendix-1.po
+source_file = locale/pot/chapters/appendix-1.pot
 source_lang = en
 type = PO
 
-[pgrouting-workshop.chapters--topology]
-file_filter = locale/<lang>/LC_MESSAGES/chapters/topology.po
-source_file = locale/pot/chapters/topology.pot
+[pgrouting-workshop.chapters--appendix-2]
+file_filter = locales/<lang>/LC_MESSAGES/chapters/appendix-2.po
+source_file = locale/pot/chapters/appendix-2.pot
 source_lang = en
 type = PO
 
-[pgrouting-workshop.chapters--installation]
-file_filter = locale/<lang>/LC_MESSAGES/chapters/installation.po
-source_file = locale/pot/chapters/installation.pot
+[pgrouting-workshop.chapters--appendix-3]
+file_filter = locales/<lang>/LC_MESSAGES/chapters/appendix-3.po
+source_file = locale/pot/chapters/appendix-3.pot
 source_lang = en
 type = PO
 
-[pgrouting-workshop.chapters--geoserver]
-file_filter = locale/<lang>/LC_MESSAGES/chapters/geoserver.po
-source_file = locale/pot/chapters/geoserver.pot
+[pgrouting-workshop.chapters--appendix-4]
+file_filter = locales/<lang>/LC_MESSAGES/chapters/appendix-4.po
+source_file = locale/pot/chapters/appendix-4.pot
 source_lang = en
 type = PO
 
-[pgrouting-workshop.chapters--introduction]
-file_filter = locale/<lang>/LC_MESSAGES/chapters/introduction.po
-source_file = locale/pot/chapters/introduction.pot
+[pgrouting-workshop.chapters--appendix-5]
+file_filter = locales/<lang>/LC_MESSAGES/chapters/appendix-5.po
+source_file = locale/pot/chapters/appendix-5.pot
 source_lang = en
 type = PO
 
-[pgrouting-workshop.chapters--SQLfunction]
-file_filter = locale/<lang>/LC_MESSAGES/chapters/SQLfunction.po
-source_file = locale/pot/chapters/SQLfunction.pot
+[pgrouting-workshop.chapters--appendix-6]
+file_filter = locales/<lang>/LC_MESSAGES/chapters/appendix-6.po
+source_file = locale/pot/chapters/appendix-6.pot
 source_lang = en
 type = PO
 
-[pgrouting-workshop.chapters--function]
-file_filter = locale/<lang>/LC_MESSAGES/chapters/function.po
-source_file = locale/pot/chapters/function.pot
+[pgrouting-workshop.chapters--chapter-1]
+file_filter = locales/<lang>/LC_MESSAGES/chapters/chapter-1.po
+source_file = locale/pot/chapters/chapter-1.pot
 source_lang = en
 type = PO
 
-[pgrouting-workshop.chapters--about]
-file_filter = locale/<lang>/LC_MESSAGES/chapters/about.po
-source_file = locale/pot/chapters/about.pot
+[pgrouting-workshop.chapters--chapter-10]
+file_filter = locales/<lang>/LC_MESSAGES/chapters/chapter-10.po
+source_file = locale/pot/chapters/chapter-10.pot
 source_lang = en
 type = PO
 
-[pgrouting-workshop.chapters--shortest_path]
-file_filter = locale/<lang>/LC_MESSAGES/chapters/shortest_path.po
-source_file = locale/pot/chapters/shortest_path.pot
+[pgrouting-workshop.chapters--chapter-11]
+file_filter = locales/<lang>/LC_MESSAGES/chapters/chapter-11.po
+source_file = locale/pot/chapters/chapter-11.pot
 source_lang = en
 type = PO
 
-[pgrouting-workshop.chapters--usingQgis]
-file_filter = locale/<lang>/LC_MESSAGES/chapters/usingQgis.po
-source_file = locale/pot/chapters/usingQgis.pot
+[pgrouting-workshop.chapters--chapter-12]
+file_filter = locales/<lang>/LC_MESSAGES/chapters/chapter-12.po
+source_file = locale/pot/chapters/chapter-12.pot
 source_lang = en
 type = PO
 
-[pgrouting-workshop.chapters--additional_installation]
-file_filter = locale/<lang>/LC_MESSAGES/chapters/additional_installation.po
-source_file = locale/pot/chapters/additional_installation.pot
+[pgrouting-workshop.chapters--chapter-2]
+file_filter = locales/<lang>/LC_MESSAGES/chapters/chapter-2.po
+source_file = locale/pot/chapters/chapter-2.pot
 source_lang = en
 type = PO
 
-[pgrouting-workshop.chapters--advanced]
-file_filter = locale/<lang>/LC_MESSAGES/chapters/advanced.po
-source_file = locale/pot/chapters/advanced.pot
+[pgrouting-workshop.chapters--chapter-3]
+file_filter = locales/<lang>/LC_MESSAGES/chapters/chapter-3.po
+source_file = locale/pot/chapters/chapter-3.pot
 source_lang = en
 type = PO
 
-[pgrouting-workshop.chapters--ol_client]
-file_filter = locale/<lang>/LC_MESSAGES/chapters/ol_client.po
-source_file = locale/pot/chapters/ol_client.pot
+[pgrouting-workshop.chapters--chapter-4]
+file_filter = locales/<lang>/LC_MESSAGES/chapters/chapter-4.po
+source_file = locale/pot/chapters/chapter-4.pot
 source_lang = en
 type = PO
 
-[pgrouting-workshop.chapters--prepare_data]
-file_filter = locale/<lang>/LC_MESSAGES/chapters/prepare_data.po
-source_file = locale/pot/chapters/prepare_data.pot
+[pgrouting-workshop.chapters--chapter-5]
+file_filter = locales/<lang>/LC_MESSAGES/chapters/chapter-5.po
+source_file = locale/pot/chapters/chapter-5.pot
 source_lang = en
 type = PO
 
-[pgrouting-workshop.chapters--osm2pgrouting]
-file_filter = locale/<lang>/LC_MESSAGES/chapters/osm2pgrouting.po
-source_file = locale/pot/chapters/osm2pgrouting.pot
+[pgrouting-workshop.chapters--chapter-6]
+file_filter = locales/<lang>/LC_MESSAGES/chapters/chapter-6.po
+source_file = locale/pot/chapters/chapter-6.pot
+source_lang = en
+type = PO
+
+[pgrouting-workshop.chapters--chapter-7]
+file_filter = locales/<lang>/LC_MESSAGES/chapters/chapter-7.po
+source_file = locale/pot/chapters/chapter-7.pot
+source_lang = en
+type = PO
+
+[pgrouting-workshop.chapters--chapter-8]
+file_filter = locales/<lang>/LC_MESSAGES/chapters/chapter-8.po
+source_file = locale/pot/chapters/chapter-8.pot
+source_lang = en
+type = PO
+
+[pgrouting-workshop.chapters--chapter-9]
+file_filter = locales/<lang>/LC_MESSAGES/chapters/chapter-9.po
+source_file = locale/pot/chapters/chapter-9.pot
 source_lang = en
 type = PO
 
