--- a/.tx/config
+++ b/.tx/config
@@ -3,115 +3,115 @@ host = https://www.transifex.com
 type = PO
 
 [pgrouting-workshop.index]
-file_filter = locales/<lang>/LC_MESSAGES/index.po
+file_filter = locale/<lang>/LC_MESSAGES/index.po
 source_file = locale/pot/index.pot
 source_lang = en
 type = PO
 
 [pgrouting-workshop.chapters--appendix-1]
-file_filter = locales/<lang>/LC_MESSAGES/chapters/appendix-1.po
+file_filter = locale/<lang>/LC_MESSAGES/chapters/appendix-1.po
 source_file = locale/pot/chapters/appendix-1.pot
 source_lang = en
 type = PO
 
 [pgrouting-workshop.chapters--appendix-2]
-file_filter = locales/<lang>/LC_MESSAGES/chapters/appendix-2.po
+file_filter = locale/<lang>/LC_MESSAGES/chapters/appendix-2.po
 source_file = locale/pot/chapters/appendix-2.pot
 source_lang = en
 type = PO
 
 [pgrouting-workshop.chapters--appendix-3]
-file_filter = locales/<lang>/LC_MESSAGES/chapters/appendix-3.po
+file_filter = locale/<lang>/LC_MESSAGES/chapters/appendix-3.po
 source_file = locale/pot/chapters/appendix-3.pot
 source_lang = en
 type = PO
 
 [pgrouting-workshop.chapters--appendix-4]
-file_filter = locales/<lang>/LC_MESSAGES/chapters/appendix-4.po
+file_filter = locale/<lang>/LC_MESSAGES/chapters/appendix-4.po
 source_file = locale/pot/chapters/appendix-4.pot
 source_lang = en
 type = PO
 
 [pgrouting-workshop.chapters--appendix-5]
-file_filter = locales/<lang>/LC_MESSAGES/chapters/appendix-5.po
+file_filter = locale/<lang>/LC_MESSAGES/chapters/appendix-5.po
 source_file = locale/pot/chapters/appendix-5.pot
 source_lang = en
 type = PO
 
 [pgrouting-workshop.chapters--appendix-6]
-file_filter = locales/<lang>/LC_MESSAGES/chapters/appendix-6.po
+file_filter = locale/<lang>/LC_MESSAGES/chapters/appendix-6.po
 source_file = locale/pot/chapters/appendix-6.pot
 source_lang = en
 type = PO
 
 [pgrouting-workshop.chapters--chapter-1]
-file_filter = locales/<lang>/LC_MESSAGES/chapters/chapter-1.po
+file_filter = locale/<lang>/LC_MESSAGES/chapters/chapter-1.po
 source_file = locale/pot/chapters/chapter-1.pot
 source_lang = en
 type = PO
 
 [pgrouting-workshop.chapters--chapter-10]
-file_filter = locales/<lang>/LC_MESSAGES/chapters/chapter-10.po
+file_filter = locale/<lang>/LC_MESSAGES/chapters/chapter-10.po
 source_file = locale/pot/chapters/chapter-10.pot
 source_lang = en
 type = PO
 
 [pgrouting-workshop.chapters--chapter-11]
-file_filter = locales/<lang>/LC_MESSAGES/chapters/chapter-11.po
+file_filter = locale/<lang>/LC_MESSAGES/chapters/chapter-11.po
 source_file = locale/pot/chapters/chapter-11.pot
 source_lang = en
 type = PO
 
 [pgrouting-workshop.chapters--chapter-12]
-file_filter = locales/<lang>/LC_MESSAGES/chapters/chapter-12.po
+file_filter = locale/<lang>/LC_MESSAGES/chapters/chapter-12.po
 source_file = locale/pot/chapters/chapter-12.pot
 source_lang = en
 type = PO
 
 [pgrouting-workshop.chapters--chapter-2]
-file_filter = locales/<lang>/LC_MESSAGES/chapters/chapter-2.po
+file_filter = locale/<lang>/LC_MESSAGES/chapters/chapter-2.po
 source_file = locale/pot/chapters/chapter-2.pot
 source_lang = en
 type = PO
 
 [pgrouting-workshop.chapters--chapter-3]
-file_filter = locales/<lang>/LC_MESSAGES/chapters/chapter-3.po
+file_filter = locale/<lang>/LC_MESSAGES/chapters/chapter-3.po
 source_file = locale/pot/chapters/chapter-3.pot
 source_lang = en
 type = PO
 
 [pgrouting-workshop.chapters--chapter-4]
-file_filter = locales/<lang>/LC_MESSAGES/chapters/chapter-4.po
+file_filter = locale/<lang>/LC_MESSAGES/chapters/chapter-4.po
 source_file = locale/pot/chapters/chapter-4.pot
 source_lang = en
 type = PO
 
 [pgrouting-workshop.chapters--chapter-5]
-file_filter = locales/<lang>/LC_MESSAGES/chapters/chapter-5.po
+file_filter = locale/<lang>/LC_MESSAGES/chapters/chapter-5.po
 source_file = locale/pot/chapters/chapter-5.pot
 source_lang = en
 type = PO
 
 [pgrouting-workshop.chapters--chapter-6]
-file_filter = locales/<lang>/LC_MESSAGES/chapters/chapter-6.po
+file_filter = locale/<lang>/LC_MESSAGES/chapters/chapter-6.po
 source_file = locale/pot/chapters/chapter-6.pot
 source_lang = en
 type = PO
 
 [pgrouting-workshop.chapters--chapter-7]
-file_filter = locales/<lang>/LC_MESSAGES/chapters/chapter-7.po
+file_filter = locale/<lang>/LC_MESSAGES/chapters/chapter-7.po
 source_file = locale/pot/chapters/chapter-7.pot
 source_lang = en
 type = PO
 
 [pgrouting-workshop.chapters--chapter-8]
-file_filter = locales/<lang>/LC_MESSAGES/chapters/chapter-8.po
+file_filter = locale/<lang>/LC_MESSAGES/chapters/chapter-8.po
 source_file = locale/pot/chapters/chapter-8.pot
 source_lang = en
 type = PO
 
 [pgrouting-workshop.chapters--chapter-9]
-file_filter = locales/<lang>/LC_MESSAGES/chapters/chapter-9.po
+file_filter = locale/<lang>/LC_MESSAGES/chapters/chapter-9.po
 source_file = locale/pot/chapters/chapter-9.pot
 source_lang = en
 type = PO
