--- a/REQUIREMENTS.txt
+++ b/REQUIREMENTS.txt
@@ -1,5 +1,4 @@
 Sphinx==1.6.5
-sphinx-intl>=0.9.11
 sphinx_bootstrap_theme>=0.4
 wheel>=0.33.6
-pip install sphinx-intl[transifex]
+sphinx-intl[transifex]
