yet another try

--- a/.github/workflows/ubuntu.yml
+++ b/.github/workflows/ubuntu.yml
@@ -55,7 +55,7 @@ jobs:
           echo :5432:*:runner:runner >> .pgpass
           sudo -u postgres psql -c 'CREATE ROLE "user" SUPERUSER CREATEDB CREATEROLE INHERIT LOGIN PASSWORD $$user$$;' -d setup
           echo :5432:*:user:user >> .pgpass
-          echo "here 5"
+          psql --help
           mkdir -p  ~/Desktop/workshop-2019
           mkdir build
           cd build
